samples/_failures_safe/1761320209_3b2ec3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc97f204.c:155: error: expected ‘;’, ‘,’ or ‘)’ at end of input
